# 3ds-chess

./: .clang-format  .clangd  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
assets/: README.md  black bishop.xcf  black king.xcf  black knight.xcf  black pawn.xcf  black queen.xcf  black rook.xcf  square-moveable.xcf  white bishop.xcf  white king.xcf  white knight.xcf  white pawn.xcf  white queen.xcf  white rook.xcf
src/: chess.cpp  chess.hpp  colors.hpp  common.hpp  game.cpp  game.hpp  main.cpp  piece.cpp  piece.hpp
src/chess/: board.cpp  board.hpp  move.cpp  move.hpp  piece.cpp  piece.hpp
src/chess/board/: attacks.cpp  fen.cpp  magicBitboards.cpp  magicBitboards.hpp  moveGen.cpp  moves.cpp  state.cpp  state.hpp
test/: debugger.cpp
test/debugger/: debug.cpp  debug.hpp  game.cpp  game.hpp  main.cpp  search.hpp
test/magic-generation/: bitboards.cpp  bitboards.hpp  convert.cpp  convertFormat.cpp  convertSource.cpp  main.cpp  search.cpp  search.hpp
